[package]
name = "game_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = [
    "windows-targets",
    "winapi",
    "std",
    "serde",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.18"
thiserror = "1.0.58"
fancy-regex = "0.13.0"
